--- a/la-chouette-agence-web-design-lyon-contact.html
+++ b/la-chouette-agence-web-design-lyon-contact.html
@@ -2,7 +2,7 @@
 <html lang="Default">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet afin d'acquérir de nouveaux clients et connaître le succès">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -13,12 +13,12 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	
     
-	<script src="./js/jquery-2.1.0.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/blocs.min.js"></script>
-	<script src="./js/jqBootstrapValidation.js"></script>
-	<script src="./js/formHandler.js"></script>
-    <title>page2</title>
+	<script defer src="./js/jquery-2.1.0.min.js"></script>
+	<script defer src="./js/bootstrap.min.js"></script>
+	<script defer src="./js/blocs.min.js"></script>
+	<script defer src="./js/jqBootstrapValidation.min.js"></script>
+	<script defer src="./js/formHandler.min.js"></script>
+    <title>la chouette agence entreprise de web design à Lyon/contact</title>
 
     
 <!-- Analytics -->
@@ -58,6 +58,9 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-6 -->
+
+<section>
+
 <div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 	<div class="container bloc-lg">
 		<div class="row">
@@ -73,6 +76,7 @@
 		</div>
 	</div>
 </div>
+</section>
 <!-- bloc-6 END -->
 
 <!-- bloc-7 -->
@@ -125,6 +129,9 @@
 
 
 <!-- Footer - bloc-8 -->
+
+<footer>
+
 <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
@@ -158,6 +165,7 @@
 		</div>
 	</div>
 </div>
+</footer>
 <!-- Footer - bloc-8 END -->
 
 </div>
