Continuité de l'implémentation pour le référencement SEO

--- a/la-chouette-agence-web-design-lyon-contact.html
+++ b/la-chouette-agence-web-design-lyon-contact.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet afin d'acquérir de nouveaux clients et connaître le succès">
@@ -48,7 +48,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">page2 &gt;</a>
+						<a href="la-chouette-agence-web-design-lyon-contact.html">page2 &gt;</a>
 					</li>
 				</ul>
 			</div>
@@ -84,8 +84,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
-					<div class="form-group">
+				<form id="form_1">
 						<label>
 							Nom
 						</label>
