--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
+	<meta name="robots" content="INDEX, FOLLOW">
     <meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet afin d'acquérir de nouveaux clients et connaître le succès">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -15,7 +16,7 @@
 	<script defer src="./js/jquery-2.1.0.min.js"></script>
 	<script defer src="./js/bootstrap.min.js"></script>
 	<script defer src="./js/blocs.min.js"></script>
-	<script defer src="./js/jquery.touchSwipe.min.js" defer></script>
+	<script defer src="./js/jquery.touchSwipe.min.js"></script>
 	<script defer src="./js/gmaps.min.js"></script>
 
     <title>La chouette agence entreprise de web design à Lyon</title>
@@ -36,9 +37,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" height="40" /></a>
-				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -88,11 +87,13 @@
 
 <section>
 
+
 <div class="bloc bgc-white l-bloc" id="bloc-2-services">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<h2>La chouette agence est une entreprise de web design qui aide<br>
+				les entreprises à devenir attractives et visibles sur internet</h2>
 			</div>
 		</div>
 
@@ -107,7 +108,7 @@
 					Web design
 				</h3>
 				<p class="text-center ">
-					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+					Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
 			</div>
 		</article>
@@ -118,7 +119,7 @@
 					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
 				<h3 class="mg-md text-center">
-					&nbsp;Stratégie
+					Stratégie
 				</h3>
 				<p class="text-center ">
 					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
@@ -141,9 +142,13 @@
 		</article>
 		</div>
 
-		<div class="row voffset-lg voffset">
+		<div class="row voffset-lg voffset txt">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
+				<h2>La chouette agence est une excellent agence web ! Les<br>
+				web designers ont réussi à capturer l'essence de notre<br>
+				entreprise et à l'intégrer à notre site. Cela nous a aidé<br>
+				à doubler nos ventes en lignes à Lyon</h2>
+				<p>Maxime Guillard,PDG de à vos fourchettes</p>
 
 			</div>
 		</div>
@@ -185,7 +190,8 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				<h2>Nous travaillons avec beaucoup de clients,<br>
+				voici nos réalisations </h2>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
@@ -244,7 +250,7 @@
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+				<a href="la-chouette-agence-web-design-lyon-contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
 		</div>
 	</div>
@@ -265,26 +271,25 @@
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+						<div class="text-center-link">
+							<a class="social" href="index.html">twitter<span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+						<div class="text-center-link">
+							<a class="social" href="index.html">facebook<span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+						<div class="text-center-link">
+							<a class="social" href="index.html">dribble<span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+						<div class="text-center-link">
+							<a class="social" href="index.html">instagram<span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
-					<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
