Ajout des labels

--- a/la-chouette-agence-web-design-lyon-contact.html
+++ b/la-chouette-agence-web-design-lyon-contact.html
@@ -99,7 +99,7 @@
 					<div class="form-group">
 						<label for="how">
 							Comment nous avez-vous connu ?
-						</label	for="how">
+						</label>
 						<input class="form-control" type="email" required id="input_504" />
 					</div>
 					<div class="form-group">
