--- a/la-chouette-agence-web-design-lyon-contact.html
+++ b/la-chouette-agence-web-design-lyon-contact.html
@@ -91,13 +91,13 @@
 						<input id="name" class="form-control" required />
 					</div>
 					<div class="form-group">
-						<label for="e-mail">
+						<label for="email">
 							Adresse email
 						</label>
 						<input id="email" class="form-control" type="email" required />
 					</div>
 					<div class="form-group">
-						<label for="how">
+						<label for="reasons">
 							Comment nous avez-vous connu ?
 						</label>
 						<input class="form-control" type="email" required id="input_504" />
