Adapation en responsive

--- a/index.html
+++ b/index.html
@@ -48,8 +48,6 @@
 						<a title="accueil" href="index.html">Accueil</a>
 					</li>
 					<li>
-					</li>
-					<li>
 						<a title="Cliquer pour accéder à la page de contact" href="la-chouette-agence-web-design-lyon-contact.html">contact</a>
 					</li>
 				</ul>
@@ -266,7 +264,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<p class="text-center white title-footer">
 					La chouette agence - Agence web basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
@@ -291,7 +289,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row-partner">
 					<div class="col-sm-4">
 						Partenaires
 							<ul>
