--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<a title="accueil" href="index.html">Accueil</a>
 					</li>
 					<li>
-						<a title="Cliquer pour accéder à la page de contact" href="la-chouette-agence-web-design-lyon-contact.html">contact</a>
+						<a title="Cliquer pour accéder à la page de contact" href="la-chouette-agence-web-design-lyon-contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -59,9 +59,7 @@
 
 <!-- bloc-1-presentation -->
 
-<header>
-
-<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+<header class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
@@ -75,23 +73,18 @@
 			</div>
 		</div>
 	</div>
-</div>
-
 </header>
 
 <!-- bloc-1-presentation END -->
 
 <!-- bloc-2-services -->
 
-<section>
-
-
-<div class="bloc bgc-white l-bloc" id="bloc-2-services">
+<section class="bloc bgc-white l-bloc" id="bloc-2-services">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<h2>La chouette agence est une entreprise de web design qui aide<br>
-				les entreprises à devenir attractives et visibles sur internet</h2>
+				les entreprises à devenir attractives et visibles sur internet.</h2>
 			</div>
 		</div>
 
@@ -142,26 +135,22 @@
 
 		<div class="row voffset-lg voffset txt">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<h2>La chouette agence est une excellent agence web ! Les<br>
+				<h2>"La chouette agence est une excellente agence web ! Les<br>
 				web designers ont réussi à capturer l'essence de notre<br>
 				entreprise et à l'intégrer à notre site. Cela nous a aidé<br>
-				à doubler nos ventes en lignes à Lyon</h2>
+				à doubler nos ventes en lignes à Lyon."</h2>
 				<p>Maxime Guillard,PDG de à vos fourchettes</p>
 
 			</div>
 		</div>
 	</div>
-</div>
-
 </section>
 
 <!-- bloc-2-services END -->
 
 <!-- bloc-3-what-i-do -->
 
-<section>
-
-<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+<section  class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
@@ -174,17 +163,13 @@
 			</div>
 		</div>
 	</div>
-</div>
-
 </section>
 
 <!-- bloc-3-what-i-do END -->
 
 <!-- bloc-4-portfolio -->
 
-<section>
-
-<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
@@ -233,15 +218,12 @@
 			</div>
 		</div>
 	</div>
-</div>
 </section>
 <!-- bloc-4-portfolio END -->
 
 <!-- bloc-5-cta -->
 
-<section>
-
-<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
 			<h2 class="mg-md text-center tc-white color">
@@ -252,17 +234,15 @@
 			</div>
 		</div>
 	</div>
-</div>
 </section>
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
 
-<footer>
+<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 
-<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
-		<div class="row">
+		<div class="row-footer">
 			<div class="col-sm-12">
 				<p class="text-center white title-footer">
 					La chouette agence - Agence web basée à Lyon.<br>
@@ -290,51 +270,21 @@
 					</div>
 				</div>
 				<div class="row-partner">
-					<div class="col-sm-4">
-						Partenaires
+					<div class="col-sm-4 partner-container">
 							<ul>
+								<li class="partner">Partenaires</li>
 								<li><a href="voiture.com">voiture.com</a></li>
 								<li><a href="pizza.com">pizza.com</a></li>
 								<li><a href="matoiture.com">matoiture.com</a></li>
 								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
 							</ul>		
 					</div>
-					<div class="col-sm-4">
-						Annuaires liste 1
-						<ul>
-							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-							<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-							<li><a href="123seoture.com">123seo.com</a></li>
-							<li><a href="123site.com">123site.com</a></li>
-							<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-							<li><a href="listeagence.com">listeagence.com</a></li>
-							<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-							<li><a href="listeseo.com">listeseo.com</a></li>
-						</ul>
-					</div>
-					<div class="col-sm-4">
-						Annuaires liste 2
-						<ul>
-							<li><a href="betterseo.com">betterseo.com</a></li>
-							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-							<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-							<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-							<li><a href="liensagogo.com">liensagogo.com</a></li>
-							<li><a href="backlink.com">backlink.com</a></li>
-							<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-							<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-							<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
-						</ul>
-					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
 </footer>
 <!-- Footer - bloc-8 END -->
-
 </div>
 <!-- Principal conteneur END -->
     
