Amélioration du responsive

--- a/la-chouette-agence-web-design-lyon-contact.html
+++ b/la-chouette-agence-web-design-lyon-contact.html
@@ -141,7 +141,7 @@
 			<div class="container bloc-sm">
 				<div class="row-footer">
 					<div class="col-sm-12">
-						<p class="text-center white">
+						<p class="text-center white title-footer">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
 						<div class="row row-no-gutters social">
@@ -171,7 +171,7 @@
 							</div>
 						</div>
 						<div class="row-partner">
-							<div class="col-sm-4">
+							<div class="col-sm-4 partner-container">
 								<ul>
 									<li class="partner">Partenaires</li>
 									<li><a href="voiture.com">voiture.com</a></li>
